# implicitModeller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/csg/: CMakeLists.txt  csg.cpp
src/examples/minimal/: CMakeLists.txt  minimal.cpp
src/examples/shadertoy/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  PixelShaderView.cpp  PixelShaderView.h  shader.frag.glsl  shadertoy.cpp
src/examples/shadertoy/shaders/: bos_shapes.frag.glsl  bos_shaping_functions.frag.glsl  raymarching.frag.glsl
src/imk/: CMakeLists.txt  PixelShaderView.cpp  gl.cpp  gl.h  imk.h
src/imk/code_gen/: code_gen.h  genGLSL.h
src/imk/csg/: csg.h  csg_factory.cpp  csg_factory.h  csg_node.cpp  csg_node.h  csg_nodes.h
src/imk/render/: marching_cubes.cpp  marching_cubes.h
src/imk/utils/: FileWatcher.cpp  FileWatcher.h
src/imk/visualization/: CMakeLists.txt
src/imk/visualization/rendering/: GLKernel.cpp  GLKernel.h
src/imk_viz/: CMakeLists.txt  PixelShaderView.cpp  PixelShaderView.h  gl.cpp  gl.h  imk_viz.h
src/imk_viz/code_gen/: genGLSL.cpp  genGLSL.h
src/test/: CMakeLists.txt  imk_test_main.cpp
src/test/imk/csg/: csg_node_test.cpp
src/test/imk/render/brep/: marching_cubes_test.cpp
